--- a/fast-detect-gpt/requirements.txt
+++ b/fast-detect-gpt/requirements.txt
@@ -1,8 +1,91 @@
-torch
-numpy
-transformers==4.28.1
-datasets==2.12.0
+aiohttp
+aiosignal
+annotated-types
+anyio
+async-timeout
+asynctest
+attrs
+backcall 
+backports.functools-lru-cache 
+brotlipy
+cached-property
+certifi 
+cffi 
+charset-normalizer 
+click
+cryptography 
+cycler
+datasets
+decorator 
+dill
+distro
+entrypoints 
+exceptiongroup
+filelock
+flit_core 
+fonttools
+frozenlist
+fsspec
+h11
+httpcore
+httpx
+huggingface-hub
+idna 
+importlib-metadata
+ipykernel 
+ipython 
+ipython-genutils
+jedi 
+joblib
+jupyter-client
+jupyter-core
+kiwisolver
 matplotlib
-tqdm
-openai
+matplotlib-inline 
+mkl-fft
+mkl-random 
+mkl-service
+multidict
+multiprocess
 nltk
+numpy 
+openai
+packaging
+pandas
+parso 
+pexpect 
+pickleshare 
+Pillow
+prompt-toolkit 
+ptyprocess 
+pyarrow
+pycparser 
+pydantic
+pydantic_core
+Pygments 
+pyOpenSSL 
+pyparsing
+PySocks 
+python-dateutil 
+pytz
+PyYAML
+pyzmq
+regex
+requests 
+responses
+six 
+sniffio
+tokenizers
+torch
+torchaudio
+torchvision
+tornado 
+tqdm
+traitlets 
+transformers
+typing_extensions
+urllib3 
+wcwidth 
+xxhash
+yarl
+zipp
